Initial backend with Spring Boot + DB config

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Backend
+
+# ⚠️ Port 5432 (comme dans le screen Supabase) + SSL obligatoire
+spring.datasource.url=jdbc:postgresql://aws-1-eu-west-2.pooler.supabase.com:5432/postgres?sslmode=require
+spring.datasource.username=postgres.rsoobempemrqwidpyhaq
+spring.datasource.password=ZejJI3oFQsPDYSC2
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
