--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=Backend
+server.port=9090
 
-# ⚠️ Port 5432 (comme dans le screen Supabase) + SSL obligatoire
-spring.datasource.url=jdbc:postgresql://aws-1-eu-west-2.pooler.supabase.com:5432/postgres?sslmode=require
-spring.datasource.username=postgres.rsoobempemrqwidpyhaq
-spring.datasource.password=ZejJI3oFQsPDYSC2
-spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.datasource.url=jdbc:mysql://localhost:3306/pfe_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+jwt.secret=Zx8$kP9!dB3#rTq7@Lm2&Vj6^Yh1*Wp0
+jwt.expiration=86400000  
