--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -83,6 +83,12 @@
             <version>8.3.0</version>   <!-- ou la dernière version -->
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 	<build>
