--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,3 +11,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 jwt.secret=Zx8$kP9!dB3#rTq7@Lm2&Vj6^Yh1*Wp0
 jwt.expiration=86400000  
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hajar.elmhedden@uit.ac.ma
+spring.mail.password=jhmv gbet tguu absb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
