--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- Permission Internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,10 +10,14 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Frontend"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:theme="@style/Theme.Frontend">
+        <activity
+            android:name=".VerifyOtpActivity"
+            android:exported="false" />
+        <!-- Activity de login principale -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -20,6 +25,27 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> <!-- Activity pour l'inscription -->
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" /> <!-- Activity pour mot de passe oublié -->
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:exported="false" /> <!-- Activity pour réinitialisation de mot de passe -->
+        <activity
+            android:name=".ResetPasswordActivity"
+            android:exported="true">
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="192.168.43.16"
+                    android:pathPrefix="/reset-password"
+                    android:scheme="http" />
             </intent-filter>
         </activity>
     </application>
