--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9090
 # ============================================
 # CONFIGURATION MYSQL (XAMPP)
 # ============================================
-spring.datasource.url=jdbc:mysql://localhost:3306/gestion_pfe?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/pfe_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
