--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -141,6 +141,15 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
 
     </dependencies>
 
