--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -7,8 +7,9 @@ server.port=9090
 # ============================================
 spring.datasource.url=jdbc:mysql://localhost:3306/pfe_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=Meryemechiguerr
+spring.datasource.driver-class-n
+ame=com.mysql.cj.jdbc.Driver
 
 # ============================================
 # JPA / Hibernate
