--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Permissions réseau -->
@@ -10,14 +9,14 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Frontend"
-        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
 
-        <!-- Activity principale (Launcher) -->
+        <!-- LOGIN (Activity de démarrage) -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -27,7 +26,13 @@
             </intent-filter>
         </activity>
 
-        <!-- Auth / Utilisateur -->
+        <!-- Profil Étudiant -->
+        <activity
+            android:name=".EtudiantProfileActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Frontend" />
+
+        <!-- Authentification -->
         <activity
             android:name=".SignupActivity"
             android:exported="false" />
@@ -54,7 +59,7 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
                     android:scheme="http"
-                    android:host="172.17.225.245"
+                    android:host="192.168.1.5"
                     android:pathPrefix="/reset-password" />
             </intent-filter>
         </activity>
