page acceuil encadrant avec detail pour eleve encadré

--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -76,6 +76,11 @@
             android:name=".EncadrantActivity"
             android:exported="false"/>
 
+        <activity
+            android:name=".DetailEtudiantActivity"
+            android:exported="false" />
+
+
 
     </application>
 
