--- a/Frontend/app/src/main/AndroidManifest.xml
+++ b/Frontend/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.frontend">
     <!-- Permissions réseau -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,68 +15,60 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Frontend"
         tools:targetApi="31">
-
+        <activity
+            android:name=".AjouterProjetActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Frontend" />
         <!-- LOGIN (Activity de démarrage) -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- Profil Étudiant -->
+        </activity> <!-- Profil Étudiant -->
         <activity
             android:name=".EtudiantProfileActivity"
             android:exported="false"
-            android:theme="@style/Theme.Frontend" />
-
-        <!-- Authentification -->
+            android:theme="@style/Theme.Frontend" /> <!-- Authentification -->
         <activity
             android:name=".SignupActivity"
             android:exported="false" />
-
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
-
         <activity
             android:name=".ForgotPasswordActivity"
             android:exported="false" />
-
         <activity
             android:name=".VerifyOtpActivity"
-            android:exported="false" />
-
-        <!-- Reset password (Deep link) -->
+            android:exported="false" /> <!-- Reset password (Deep link) -->
         <activity
             android:name=".ResetPasswordActivity"
             android:exported="true">
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data
-                    android:scheme="http"
-                    android:host="192.168.1.5"
-                    android:pathPrefix="/reset-password" />
-            </intent-filter>
-        </activity>
 
-        <!-- Rôles -->
+                <data
+                    android:host="192.168.1.5"
+                    android:pathPrefix="/reset-password"
+                    android:scheme="http" />
+            </intent-filter>
+        </activity> <!-- Rôles -->
         <activity
             android:name=".AdminActivity"
             android:exported="false" />
-
         <activity
             android:name=".StudentActivity"
             android:exported="false" />
-
         <activity
             android:name=".CadreActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
