--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=9090
 # ============================================
 spring.datasource.url=jdbc:mysql://localhost:3306/pfe_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Meryemechiguerr
+spring.datasource.password=
 spring.datasource.driver-class-n
 ame=com.mysql.cj.jdbc.Driver
 
