--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=Backend
-
 server.port=9090
 
 # ============================================
@@ -7,7 +6,7 @@ server.port=9090
 # ============================================
 spring.datasource.url=jdbc:mysql://localhost:3306/pfe_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=a!y!a!boutahli12
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ============================================
