modidication des variables pour deploimen

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,16 +4,18 @@ server.port=9090
 # ============================================
 # CONFIGURATION MYSQL (XAMPP)
 # ============================================
-spring.datasource.url=jdbc:mysql://localhost:3306/pfe_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://ep-nameless-fire-ahfh0q7o-pooler.c-3.us-east-1.aws.neon.tech:5432/neondb?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_ZKs5JLce7ICQ
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # ============================================
 # JPA / Hibernate
 # ============================================
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
