--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.6.0</version>
+</dependency>
 
         <!-- PostgreSQL -->
         <!-- <dependency>
