changement de port pour render

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -5,9 +5,14 @@ COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-# Étape 2 : créer l'image finale avec Java
+# Étape 2 : image finale avec Java
 FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
+
+# Définir le port via variable d'environnement
+ENV PORT=8080
+
 COPY --from=build /app/target/backend-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
