--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Backend
-server.port=9090
+server.port=${PORT:8080}
 
 # ============================================
 # CONFIGURATION MYSQL (XAMPP)
