--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -5,14 +5,16 @@ COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-# Étape 2 : image finale avec Java
+# Étape 2 : image finale
 FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
 
-# Définir le port via variable d'environnement
+# Utiliser le PORT fourni par la plateforme
 ENV PORT=8080
 
 COPY --from=build /app/target/backend-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8080
+
+# Expose le port via variable
+EXPOSE ${PORT}
 
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
